--- a/BookWeb/Views/Shared/_Layout.cshtml
+++ b/BookWeb/Views/Shared/_Layout.cshtml
@@ -57,17 +57,17 @@
                         <b class="logo-icon">
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
-                            <img src="~/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
-                            <!-- Light Logo icon -->
-                            <img src="~/assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                            Book
+                            
                         </b>
                         <!--End Logo icon -->
                         <!-- Logo text -->
                         <span class="logo-text">
-                            <!-- dark Logo text -->
+                            <!-- dark Logo text 
                             <img src="~/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-                            <!-- Light Logo text -->
+                           Light Logo text 
                             <img src="~/assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
+                            -->
                         </span>
                     </a>
                     <!-- ============================================================== -->
@@ -135,7 +135,7 @@
                                 <div class="user-pic"><img src="../../assets/images/users/1.jpg" alt="users" class="rounded-circle" width="40" /></div>
                                 <div class="user-content hide-menu m-l-10">
                                     <a href="javascript:void(0)" class="" id="Userdd" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <h5 class="m-b-0 user-name font-medium">Steave Jobs <i class="fa fa-angle-down"></i></h5>
+                                        <h5 class="m-b-0 user-name font-medium">Name <i class="fa fa-angle-down"></i></h5>
                                         <span class="op-5 user-email">varun@gmail.com</span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="Userdd">
