--- a/BookWeb/Views/Book/Create.cshtml
+++ b/BookWeb/Views/Book/Create.cshtml
@@ -30,34 +30,20 @@
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="AuthorId">Author</label>
-                            <select asp-for="AuthorId" asp-items="@ViewBag.author"
-                                    class="form-control custom-select" required="">
-                                <option value="">Please select one</option>
-                            </select>
+                            <label asp-for="AuthorId">AuthorId</label>
+                            <input type="text" asp-for="AuthorId" class="form-control" placeholder="AuthorId" required="">
+                            
                             <span asp-validation-for="AuthorId" class="text-danger"></span>
-
                         </div>
                         <div class="form-group">
-                            <label asp-for="GenreId">Genre</label>
-                            <select asp-for="GenreId" asp-items="@ViewBag.genre"
-                                    class="form-control custom-select">
-                                <option value="">Please select one</option>
-                            </select>
-                            <span asp-validation-for="GenreId" class="text-danger"></span>
+                            <label asp-for="GerneID">GenreID</label>
+                            <input type="text" asp-for="GerneID" class="form-control" placeholder="GenreID" required="">
+                            <span asp-validation-for="GerneID" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="ISBN">ISBN</label>
                             <input type="text" asp-for="ISBN" class="form-control" placeholder="ISBN" required="">
                             <span asp-validation-for="ISBN" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <label asp-for="PublisherId">Publisher</label>
-                            <select asp-for="PublisherId" asp-items="@ViewBag.publisher"
-                                    class="form-control custom-select">
-                                <option value="">Please select one</option>
-                            </select>
-                            <span asp-validation-for="Publisher" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="YearPublish">YearPublish</label>
@@ -73,8 +59,8 @@
                             <input type="text" asp-for="Summary" class="form-control" placeholder="Summary" required="">
                             <span asp-validation-for="Summary" class="text-danger"></span>
                         </div>
-
-
+                        
+                       
 
                         <button type="submit" class="btn btn-success mr-2">Submit</button>
                         <button asp-action="Index" type="submit" class="btn btn-dark">Cancel</button>
