--- a/BookWeb/Views/Book/Edit.cshtml
+++ b/BookWeb/Views/Book/Edit.cshtml
@@ -28,17 +28,14 @@
                             <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="AuthorId">Author</label>
-                            <select asp-for="AuthorId" asp-items="@ViewBag.author"
-                                    class="form-control custom-select" required="">
-                                <option value="">Please select one</option>
-                            </select>
+                            <label asp-for="AuthorId">AuthorId</label>
+                            <input type="text" asp-for="AuthorId" class="form-control" placeholder="AuthorId" required="">
                             <span asp-validation-for="AuthorId" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="GenreId">GenreID</label>
-                            <input type="text" asp-for="GenreId" class="form-control" placeholder="GenreID" required="">
-                            <span asp-validation-for="GenreId" class="text-danger"></span>
+                            <label asp-for="GerneID">GenreID</label>
+                            <input type="text" asp-for="GerneID" class="form-control" placeholder="GenreID" required="">
+                            <span asp-validation-for="GerneID" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="ISBN">ISBN</label>
