Book edit updated

--- a/BookWeb/Views/Genre/Index.cshtml
+++ b/BookWeb/Views/Genre/Index.cshtml
@@ -23,7 +23,7 @@
                 <h4 class="card-title">List</h4>
                 <!-- <h6 class="card-subtitle">Add New Author</h6>-->
                 <div class="col-md-12 col-12 align-self-center">
-                    <a asp-controller="Category" asp-action="Create" class="btn float-right hidden-sm-down btn-success"><i class="mdi mdi-plus-circle"></i>New Book</a>
+                    <a asp-controller="Genre" asp-action="Create" class="btn float-right hidden-sm-down btn-success"><i class="mdi mdi-plus-circle"></i>New Genre</a>
                 </div>
                 <div class="table-responsive">
                     <table class="table v-middle">
