--- a/BookWeb/Views/Category/Edit.cshtml
+++ b/BookWeb/Views/Category/Edit.cshtml
@@ -5,7 +5,7 @@
 <!-- ============================================================== -->
 <div class="row page-titles">
     <div class="col-md-5 align-self-center">
-        <h3 class="text-themecolor">Authors</h3>
+        <h3 class="text-themecolor">Category</h3>
     </div>
     <!--   <div class="col-md-7 align-self-center">
          <a href="https://wrappixel.com/templates/adminpro/" class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down"> Upgrade to Pro</a>
