--- a/BookWeb/Views/Publisher/Index.cshtml
+++ b/BookWeb/Views/Publisher/Index.cshtml
@@ -20,7 +20,7 @@
                 <h4 class="card-title">List</h4>
                 <!-- <h6 class="card-subtitle">Add New Author</h6>-->
                 <div class="col-md-12 col-12 align-self-center">
-                    <a asp-controller="Book" asp-action="Create" class="btn float-right hidden-sm-down btn-success"><i class="mdi mdi-plus-circle"></i>New Book</a>
+                    <a asp-controller="Publisher" asp-action="Create" class="btn float-right hidden-sm-down btn-success"><i class="mdi mdi-plus-circle"></i>New Publisher</a>
                 </div>
                 <div class="table-responsive">
                     <table class="table v-middle">
